tests/baselines/reference/createArray.errors.txt
==== tests/cases/compiler/createArray.ts (7 errors) ====
    var na=new number[];
                     ~~
!!! createArray.ts(1,18): error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
               ~~~~~~
!!! createArray.ts(1,12): error TS2095: Could not find symbol 'number'.
    
    class C {
    }
    
    new C[];
         ~~
!!! createArray.ts(6,6): error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
    var ba=new boolean[];
                      ~~
!!! createArray.ts(7,19): error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
               ~~~~~~~
!!! createArray.ts(7,12): error TS2095: Could not find symbol 'boolean'.
    var sa=new string[];
                     ~~
!!! createArray.ts(8,18): error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
               ~~~~~~
!!! createArray.ts(8,12): error TS2095: Could not find symbol 'string'.
    function f(s:string):number { return 0;
    }
    if (ba[14]) {
        na[2]=f(sa[3]);
    }
    
    new C[1]; // not an error